# ChangeLog for dev-java/lucene-xml-query-parser
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Mar 2009; Jacob Floyd (techgurufloyd) <techgurufloyd@gmail.com>
  -lucene-xml-query-parser-2.3.1.ebuild,
  +lucene-xml-query-parser-2.3.1-r1.ebuild,
  -lucene-xml-query-parser-2.4.0.ebuild,
  +lucene-xml-query-parser-2.4.0-r1.ebuild:
  -m lucene-contrib.eclass [QA] EAPI should be in ebuilds not eclasses

  25 Feb 2009; Jacob Floyd (techgurufloyd) <techgurufloyd@gmail.com>
  +lucene-xml-query-parser-2.4.0.ebuild:
  Version Bump

  14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +metadata.xml:
  creating metadata.xml to shut up repoman

  14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +ChangeLog:
  adding ChangeLog to shut repoman up