@@ -1,6 +1,6 @@
 DIST lucene-2.3.1-src.tar.gz 4597493 RMD160 40d8c78e841a65948615ccdbfbde5c4373691e46 SHA1 b1d5b54d5a072f7b166f98cadb7541b47e10bcd5 SHA256 84ddee3a667242917c8117d9e273d9e81ef7f4015c69a7758f12b8018054e646
 DIST lucene-2.4.0-src.tar.gz 5053702 RMD160 c6c33faec176af806bf5e70ccef76458b1fd5f6c SHA1 7e7e59db8a006521459cde70376784bc95dac2f2 SHA256 01509848b8cf2e6675a38fc06124c7622cdd573e975ebcc893c36903b416b7c7
-EBUILD lucene-xml-query-parser-2.3.1-r1.ebuild 241 RMD160 8e9fc6ee275b4c25921270163f5108f0a3feb629 SHA1 ac5c4921408f6fe742736d4394a6d20e343dd105 SHA256 ed232d02174e58e44205b20a1d4954fd8ee30a9e77e995229814b15f5c67d55f
-EBUILD lucene-xml-query-parser-2.4.0-r1.ebuild 241 RMD160 5f34a7987dd932ab8b2692753c04791839998037 SHA1 b8000ad90478ad3c1665e4d09a72ada824b53f5c SHA256 3420304a74d9fbef208afd413f71f7b9e43a8f76ee1fcbd71c9e8f052f3dfd86
-MISC ChangeLog 779 RMD160 41b7828a5bf76861a0206052579d54d13f8eda34 SHA1 ef3505abae1b6306b64b4e46f47dddf436679a11 SHA256 02b34202cfe80fed8d064c5334c09c4f06422ea2607ec880dc1ce53003e97d44
+EBUILD lucene-xml-query-parser-2.3.1-r2.ebuild 271 RMD160 f5f012c9ccb7e5ec86decaad8257264f10917de5 SHA1 6e2d6a0d1c86b5261da1243ae7a1d9ce04bb0246 SHA256 6ba5cc9846664758f0577e4c5d9c52827d800b276850487de2946143cfeca32a
+EBUILD lucene-xml-query-parser-2.4.0-r2.ebuild 374 RMD160 9299c2fa47beeacd0848d319d691a1a265b40d20 SHA1 66e0ccc5b15296025d5b13b94f697eae31d01c52 SHA256 5f3e1482aeb437e98f806796f0b718aa780c9f88d00b6ae5dd120ad684c1dc35
+MISC ChangeLog 1065 RMD160 b6798f2fa8ab9ff28a189aa956f50bce339b6533 SHA1 af15209b343c933032b47af09968a5ed97f7e197 SHA256 591c297ea519f142334bf412b4b219c4cd7bc7b30a433248dd9d836dcb87c2fb
 MISC metadata.xml 249 RMD160 90b38bce3842618113c7c29a9871bf87dc9ced21 SHA1 02a47d5f0a4eae44679bbcafb5e8a49376c01393 SHA256 0691c01ea15416ff28baa6168574c564e69675c66541df3614f698e266ec8d84
