@@ -2,12 +2,19 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Mar 2009; Jacob Floyd (techgurufloyd) <techgurufloyd@gmail.com>
+  -lucene-xml-query-parser-2.3.1-r1.ebuild,
+  +lucene-xml-query-parser-2.3.1-r2.ebuild,
+  -lucene-xml-query-parser-2.4.0-r1.ebuild,
+  +lucene-xml-query-parser-2.4.0-r2.ebuild:
+  fixed dependency with lucene-queries
+
   03 Mar 2009; Jacob Floyd (techgurufloyd) <techgurufloyd@gmail.com>
   -lucene-xml-query-parser-2.3.1.ebuild,
   +lucene-xml-query-parser-2.3.1-r1.ebuild,
   -lucene-xml-query-parser-2.4.0.ebuild,
   +lucene-xml-query-parser-2.4.0-r1.ebuild:
-  -m lucene-contrib.eclass [QA] EAPI should be in ebuilds not eclasses
+  -m lucene-contrib.eclass: [QA] EAPI should be in ebuilds not eclasses
 
   25 Feb 2009; Jacob Floyd (techgurufloyd) <techgurufloyd@gmail.com>
   +lucene-xml-query-parser-2.4.0.ebuild:
